GNOME Bugzilla – Bug 643574
"library-manufacturer" not supported in PKCS#11 uris
Last modified: 2019-03-23 21:19:39 UTC
A legal PKCS#11 URI like this: pkcs11:library-manufacturer=Gnome%20Keyring;serial=1:XDG:DEFAULT Results in: ** Message: Ignoring unrecognized or unsupported field 'library-manufacturer'
Created attachment 182170 [details] [review] Patch to fix the problem
Merged.