[gck] Support 'library-manufacturer' in PKCS#11 URIs properly.

https://bugzilla.gnome.org/show_bug.cgi?id=643574